cli/tests/error_021_stack_method.ts.out
[WILDCARD]Error: method
    at A.m ([WILDCARD]tests/error_021_stack_method.ts:[WILDCARD])
    at [WILDCARD]tests/error_021_stack_method.ts:[WILDCARD]
error: Uncaught Error: method
    throw new Error("method");
          ^
    at A.m ([WILDCARD]tests/error_021_stack_method.ts:[WILDCARD])
    at [WILDCARD]tests/error_021_stack_method.ts:[WILDCARD]
